@@ -4,6 +4,8 @@ error("impossible inverse in gdiv: [Mod(0, 2), Mod(0, 2); Mod(0, 2), Mod(0,
 [0, 2]
 1
 1
+[[;], [;]]
+[[], [;]]
   ***   at top-level: mathouseholder(1,1)
   ***                 ^-------------------
   *** mathouseholder: incorrect type in mathouseholder (t_INT).
@@ -369,4 +371,4 @@ od(0, 18446744073709551629); Mod(7, 18446744073709551629), Mod(8, 1844674407
   ***   at top-level: 1~
   ***                 ^--
   *** _~: incorrect type in gtrans (t_INT).
-Total time spent: 73
+Total time spent: 72
