@@ -220,6 +220,7 @@ AP 81- [GP] central simple algebra package, GP functions
    86- idealprimedec now allows an optional 3rd argument, to limit f(P/p)
    87- [libpari] cb_pari_err_handle callback
    88- primes([-5,5]) -> [5] (spurious absolute values)
+   89- matqr([;]) -> crash
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
